# auto_trader

./: .gitignore  BUILD.md  CMakeLists.txt  README.md  configure
src/: CMakeLists.txt
src/data/: CMakeLists.txt  bitmex_data.cpp  bitmex_data.hpp  bitmex_data_structures.cpp  bitmex_data_structures.hpp  template.hpp
src/order/: CMakeLists.txt  order.cpp  order.hpp
src/pricing/: CMakeLists.txt  demo_pricing.cpp  demo_pricing.hpp  template.cpp  template.hpp
src/simuator/: CMakeLists.txt  simulator.hpp
src/simulator/: CMakeLists.txt  README.md  simulator.cpp  simulator.hpp
src/strategy/: CMakeLists.txt  strategy.hpp  template.cpp  template.hpp
src/utils/: CMakeLists.txt  utils.cpp  utils.hpp
test/: CMakeLists.txt
test/data/: CMakeLists.txt  test_data.cpp
test/data/data_test/: candle_data.json
test/utils/: CMakeLists.txt  test_utils.cpp
test/utils/util_test/: test.json
